samples/_failures_safe/1761183382_3390db_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_317a1b7f.c: In function ‘main’:
./samples/SAFE/__tmp_317a1b7f.c:138:5: error: expected declaration or statement at end of input
  138 |     printf("Decompression successful - data verified\n");
      |     ^~~~~~
